--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
 		"tailwindcss": "^3.2.7",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
-		"vite": "^4.0.0"
+		"vite": "^4.0.0",
+		"vite-plugin-mkcert": "^1.13.3"
 	},
 	"type": "module",
 	"dependencies": {
