--- a/package.json
+++ b/package.json
@@ -33,9 +33,6 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@floating-ui/dom": "^1.2.5",
-		"@sentry/node": "^7.44.2",
-		"@sentry/svelte": "^7.44.2",
-		"@sentry/tracing": "^7.44.2"
+		"@floating-ui/dom": "^1.2.5"
 	}
 }
