--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
 		"cleanup": "prettier --plugin-search-dir . --write . && prettier --plugin-search-dir . --check . && eslint ."
 	},
 	"devDependencies": {
-		"@skeletonlabs/skeleton": "^1.0.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
 		"@types/node": "^18.15.3",
@@ -17,6 +16,8 @@
 		"@typescript-eslint/parser": "^5.45.0",
 		"@vitejs/plugin-basic-ssl": "^1.0.1",
 		"autoprefixer": "^10.4.14",
+		"carbon-components-svelte": "^0.73.4",
+		"carbon-icons-svelte": "^11.4.0",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
@@ -25,14 +26,10 @@
 		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
-		"tailwindcss": "^3.2.7",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0",
 		"vite-plugin-mkcert": "^1.13.3"
 	},
-	"type": "module",
-	"dependencies": {
-		"@floating-ui/dom": "^1.2.5"
-	}
+	"type": "module"
 }
