--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,10 @@
 		"strict": true,
 		"baseUrl": ".",
 		"paths": {
-			"@lib/*": ["src/lib/*"],
-			"@components/*": ["src/components/*"],
-			"@assets/*": ["src/assets/*"],
-			"@interfaces/*": ["src/interfaces/*"]
+			"$lib/*": ["src/lib/*"],
+			"$components/*": ["src/components/*"],
+			"$assets/*": ["src/assets/*"],
+			"$interfaces/*": ["src/interfaces/*"]
 		}
 	}
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
