--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
 		"strict": true,
 		"baseUrl": ".",
 		"paths": {
-			"$lib/*": ["src/lib/*"],
+			"$lib": ["./src/lib"],
+			"$lib/*": ["./src/lib/*"],
 			"$components/*": ["src/components/*"],
 			"$assets/*": ["src/assets/*"],
 			"$interfaces/*": ["src/interfaces/*"]
